# Combat_Engine

./: CMakeLists.txt  README.md
src/: game_entry.cpp  game_entry.h  main.cpp
src/core/: dqn_agent.cpp  dqn_agent.h  environment.h  neural_net.cpp  neural_net.h  replay.cpp  replay.h  timestep.h
src/debug/: debug_overlay.cpp  debug_overlay.h
src/game/: combat.cpp  combat.h  entity.h  replay.cpp  replay.h  simulation.cpp  simulation.h
src/games/combat/: combat_env.cpp  combat_env.h  debug_overlay.cpp  debug_overlay.h  entity.h  input.h  renderer.h  simulation.h
src/games/flappy_bird/: flappy_bird_env.cpp  flappy_bird_env.h
src/render/: renderer.cpp  renderer.h
